--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -109,12 +109,12 @@ In the meantime, our findings imply that while large canopy trees are the most v
 # Introduction
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
-Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities], leading to, individually or in combination, reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
+Globally, temperatures have risen # $1.2^\circ$C since the 1850-1900 period [Rohde & Hausfater, 2020] and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021; @corlettImpactsWarmingTropical2011], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Collectively, these impacts may lead to reduced forest C sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system, decreased C storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
-Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. 
+Overstory trees form canopies that play a crucial role in moderating macro and microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. 
 This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and CO~2~ that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsWithincanopyVariationRate2004a].
 Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
@@ -144,7 +144,7 @@ While the focus here is on vertical gradients, it is important to note that in h
 ![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion light incidence, (c) proportion sun leaves, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical montane broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV). Vertical profiles in micrometeorological variables (d-h) at all NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
 
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
-The distribution of this foliage is structured in correspondence with the distribution of tree sizes within a forest, where leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
+Foliage distribution is structured in correspondence with the distribution of tree sizes within a forest, where leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
 Dense canopy forests composed of broadleaf trees can have high LAD in the upper canopy layers, as well as in the understory (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a) -- a pattern common in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993].
 In temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [e.g., SCBI, Fig. `r fig_NEON_vertical`a, @parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]. 
 In open canopy forests, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
@@ -162,12 +162,11 @@ Specifically, across the NEON sites, July maximum daily wind speeds averaged up 
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_a$) and associated potential for loss of both water and heat (see next section).
 
 **Atmospheric concentrations carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
-Atmospheric CO~2~ concentrations tend to be higher near ground level at night, but largely dissipate during the day [@koike_leaf_2001; @yang_spatial_1999].
-Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
+Atmospheric CO~2~ concentrations tend to be higher near ground level at night, associated with plant and soil respiration, but the elevated $CO_{2}$, but the elevated $CO_{2}$ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999].Elevated $CO_{2}$ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are neglible for most of day when photosynthesis is occurring, pattern in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
 
 Relative humidity, $RH$, tends to be higher in the understory and decrease with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
 Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
-In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from a leaf, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Additionally, increase in canopy height and LAI contributes to lowering maximum $T_{air}$ and VPD in the understory [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
+In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Maximum $T_{air} and VPD in the understory are further decreased with increasing canopy height and LAI [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).**
 The $T_{air}$ gradient along canopies and understories varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [*Defrenne et al. 2021*]. 
@@ -207,7 +206,7 @@ With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
 However, higher windspeeds and lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give them lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
 
-**Within closed-canopy forets, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
+**Within closed-canopy forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
 Under hot conditions, higher wind speeds and $g_a$ enable cooling, but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf} - T_{air}$ [Fig. `r fig_leaf_T`b, @martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]. 
 Thus, understory leaves, which typically experience lower windspeeds (Fig. `r fig_NEON_vertical`), would retain more heat.
 The higher-RH conditions of the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts].
@@ -215,11 +214,11 @@ Thus, understory leaves can remain cooler under lower radiation load, but their 
 In contrast, under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a propensity for $T_{leaf} - T_{air}$ to be elevated more in the canopy than the understory (Fig.`r fig_leaf_T`).
 Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limitation is steeper that that of shade leaves, resulting in greater increases in $T_{leaf}$ when $g_s$ is reduced [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 
-### In-situ observations
+### In situ observations
 **Following the principles outlined above, vertical microclimate profiles, leaf traits (see "Leaf Traits" section), and $g_s$ (see "Leaf metabolism and thermal responses" section) together explain in-situ $T_{leaf}$ observations (Figs. `r fig_NEON_vertical`-`r fig_leaf_T`).** 
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$* / ~due to high evapotranspiration~, and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
-In closed-canopy forests, *including tropical and temperate broadleaf forests*, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
-In contrast, in open forests with lower buffering capacity, lower-canopy $T_{leaf}$ is commonly greater than upper canopy $T_{leaf}$, due to greater light permeability, *vertical air mixing*, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
+In closed-canopy forests, *including tropical and temperate broadleaf forests*, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optima for photosynthesis ($T_{opt}$) and $T_{air}$, because of $g_s$-limitation and high radiation [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
+In contrast, in open forests with lower buffering capacity, lower-canopy $T_{leaf}$ may be greater than upper canopy $T_{leaf}$, due to greater light permeability, *vertical air mixing*, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
 Similarly, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
 Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
@@ -227,14 +226,14 @@ Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more
 
 The extent of this buffering varies across forest types.
 *Upper canopies of temperate-deciduous species can have greater $T_{leaf} - T_{air}$ than tropical moist and wet forest [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018], however in considering a broader range of forests, results may differ (Fig. `r fig_NEON_vertical`).* 
-Because conifer leaves have lower $g_a$ than broad leaves, conifer canopies have lower mean $T_{leaf}$ [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. 
+Because needle-leaves have lower $g_a$ than broad leaves, conifer canopies have lower mean $T_{leaf}$ [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. 
 
 Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 
 ## Leaf traits 
 
 **Leaf thermoregulation is controlled by leaf traits, which are in-turn adapted to their environment [@michaletzEnergeticCarbonEconomic2016] in order to maintain desirable $T_{leaf}$ for leaf metabolism (see following section) across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004]**
-Leaf morphology adapts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], where the ratio of direct to diffused light and resultant water demands cause leaves to develop characteristics of sun vs shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. 
+Leaf morphology adjusts to the local microenvironment during leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of direct to diffused light and associated water demands cause leaves to develop characteristics of sun vs shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. 
 This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`). 
 
 ~~~ *(this paragraph breaks the flow, and I'd love to be able to drop it or perhaps dramatically shorten. It is important and interesting content, though)*
@@ -253,9 +252,9 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 Within-canopy, leaf traits vary along the canopy light gradient [*i.e.,* in sun and shade leaves, @casasSunShadeLeaves2011] at a leaf anatomical, structural and biochemical level [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. 
 This variation shapes vertical $T_{leaf}$ patterns [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016]. 
-Further research to characterize trait relationships and responses through the vertical canopy is needed, because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Further research to characterize trait relationships and responses through the vertical canopy is needed, because much of our understanding of trait coordination is based on the leaf economics spectrum concept (Wright et al. 2004) was developed using sun leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
-Intraspecific traits also vary along the ontogeny of the same species in canopy and understory, for example, LMA, photosynthetic capacity [per area] and $gs$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000].  
+Independent of light environment, traits also vary within species along the ontogenetic trajectory from the understory to the canopy. For example, LMA, photosynthetic capacity [per area] and $gs$ have been observed to increase with height, separate from light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000].  
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -270,12 +269,12 @@ nocite: |
 
 #### Anatomical, Morphological and Physiological traits
 
-Exposed canopy environment induces traits in sun leaves that are better adaptated to heat and water stress than shade leaves where, for instance, being smaller, hairier, with greater vein density and LMA [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed200], as well as strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits [see Table 1] collectively aid heat dissapation and regulate $T_{leaf}$-photosynthetic balance. Whereas, shade leaves have traits that enable rapid light capture in the diffused-light environment with sunflecks, for example greater SLA, but are more likely to get overheated than sun leaves due to greater thermal capacitance [@mathurPhotosyntheticEfficiencySun2018a; @leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013a]. In open canopies where light is comparitevely homogenous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves in the exposed canopy have traits that help avoid heat and water stress than shade leaves where, for instance, being smaller, hairier, with higher vein density [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed200], and steeper leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits [see Table 1] collectively aid heat dissapation and regulate $T_{leaf}$-photosynthetic balance. Whereas, shade leaves have traits that maximize light capture in the diffused-light environment with sunflecks, for example lower LMA, but are more likely to get overheated than sun leaves due to greater thermal capacitance [@mathurPhotosyntheticEfficiencySun2018a; @leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013a]. In open canopies where light is comparitively homogenous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### Biochemical traits
 
-Biochemical protection against foliage light and heat damage also increases with irradiance.
-Caratenoids and xanthophyll pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--an antioxidant scavenging function--convert excess light into heat [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature [@kumarathungeAcclimationAdaptationComponents2019a]. Elemental traits, N and P though differ with soil conditions, $N_{area}$ typically increases in the direction of new leaf growth, where it also optimizes to prevent photoinhibition in leaves vertically [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes in producing species facilitate higher heat tolerance in exposed canopies, making these species more advantageous [*REF*].
+Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory. 
+Caratenoids and xanthophyll cycle pigments--violaxanthin, antheraxanthin and zeaxanthin [$VAZ$]--can play a role in antioxidant scavenging and converting excess excitation energy into heat to reduce photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007a; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. This is also important for leaf acclimation to higher temperature if high temperature impairs the photochemical energy dissipation pathway  [Havaux, M. and Tardy, F., 1996]. Elemental traits, such as N and P differ with soil conditions, but $N_{area}$ typically increases in the direction of new leaf growth, where its allocation is optimized to prevent photoinhibition in leaves [@kitaoCanopyNitrogenDistribution2018]. Additionally, isoprenes facilitate higher heat tolerance in exposed canopies in species capable of emitting isoprenes, providing these species with a selective advantage in a warming world [*REF*].
 
 #### Leaf lifespan and Deciduousness ("Lifecycle / ecological traits? ")
 
