--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1842,6 +1842,12 @@
   number = {1}
 }
 
+@online{ESSDBerkeleyEarth,
+  title = {{{ESSD}} - {{The Berkeley Earth Land}}/{{Ocean Temperature Record}}},
+  url = {https://essd.copernicus.org/articles/12/3469/2020/},
+  urldate = {2021-06-28}
+}
+
 @article{fajardoTemperateRainForest2016,
   title = {Temperate Rain Forest Species Partition Fine-Scale Gradients in Light Availability Based on Their Leaf Mass per Area ({{LMA}})},
   author = {Fajardo, Alex and Siefert, Andrew},
@@ -6623,6 +6629,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\Q7ZJPBQY\\Roberts et al. - 1990 - Stomatal and Boundary-Layer Conductances in an Ama.pdf},
   langid = {english},
   number = {1}
+}
+
+@article{rohdeBerkeleyEarthLand2020,
+  title = {The {{Berkeley Earth Land}}/{{Ocean Temperature Record}}},
+  author = {Rohde, Robert A. and Hausfather, Zeke},
+  date = {2020-12-17},
+  journaltitle = {Earth Syst. Sci. Data},
+  volume = {12},
+  pages = {3469--3479},
+  issn = {1866-3516},
+  doi = {10.5194/essd-12-3469-2020},
+  url = {https://essd.copernicus.org/articles/12/3469/2020/},
+  urldate = {2021-06-28},
+  abstract = {A global land–ocean temperature record has been created by combining the Berkeley Earth monthly land temperature field with spatially kriged version of the HadSST3 dataset. This combined product spans the period from 1850 to present and covers the majority of the Earth’s surface: approximately 57 \% in 1850, 75 \% in 1880, 95 \% in 1960, and 99.9 \% by 2015. It includes average temperatures in 1◦ × 1◦ lat–long grid cells for each month when available. It provides a global mean temperature record quite similar to records from Hadley’s HadCRUT4, NASA’s GISTEMP, NOAA’s GlobalTemp, and Cowtan and Way and provides a spatially complete and homogeneous temperature field. Two versions of the record are provided, treating areas with sea ice cover as either air temperature over sea ice or sea surface temperature under sea ice, the former being preferred for most applications. The choice of how to assess the temperature of areas with sea ice coverage has a notable impact on global anomalies over past decades due to rapid warming of air temperatures in the Arctic. Accounting for rapid warming of Arctic air suggests ∼ 0.1 ◦C additional global-average temperature rise since the 19th century than temperature series that do not capture the changes in the Arctic. Updated versions of this dataset will be presented each month at the Berkeley Earth website (http://berkeleyearth.org/data/, last access: November 2020), and a convenience copy of the version discussed in this paper has been archived and is freely available at https://doi.org/10.5281/zenodo.3634713 (Rohde and Hausfather, 2020).},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EYPBASVE\\Rohde and Hausfather - 2020 - The Berkeley Earth LandOcean Temperature Record.pdf},
+  langid = {english},
+  number = {4}
 }
 
 @online{RoleReportingStandards,
