incorporated  Martijn's edits and suggestions
still working on this

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -162,7 +162,7 @@ Specifically, across the NEON sites, July maximum daily wind speeds averaged up 
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_a$) and associated potential for loss of both water and heat (see next section).
 
 **Atmospheric concentrations carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
-Atmospheric CO~2~ concentrations tend to be higher near ground level at night, associated with plant and soil respiration, but the elevated $CO_{2}$, but the elevated $CO_{2}$ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999].Elevated $CO_{2}$ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are neglible for most of day when photosynthesis is occurring, pattern in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
+Atmospheric CO~2~ concentrations tend to be higher near ground level at night, associated with plant and soil respiration, but the elevated $CO_{2}$ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated $CO_{2}$ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are neglible for most of day when photosynthesis is occurring, pattern in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
 
 Relative humidity, $RH$, tends to be higher in the understory and decrease with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
 Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
@@ -329,15 +329,15 @@ Interestingly, within-canopy Japanese oak sun and shade leaves were found to mai
 
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. 
 
-**Thermal tolerance (e.g., $T_{50}$) seldom varies with exposure among recent studies, but there are no studies isolating effect of height.**
+**Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 
-In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. However, more recently @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun leaves for two of three species, measured near ground level, in Panama tropical forest, but results were not significant. 
+In 1994, Knapp et al. showed that $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. Within species, @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun leaves for two of three tree species measured in Panama.
 
 Leaf thermal tolerances are more closely adapted to microenvironment than macroclimate [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Particularly, in an Australian arid region, *Acacia papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments.
 
 *We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
-Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater LMA (greater construction costs), compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance, experienced higher $T_{leaf_{max}}$, but showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$).
+Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez and Feeley, 2020a] and more by leaf traits. $T_{crit}$ was found to be greater among tropical species with large leaves that had slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ was greater among species' leaves with greater LMA (greater construction costs), compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that experienced higher maximum temperatures had higher photosynthetic heat tolerance. 
 
 *If we take geographic gradients as a reliable proxy, we'd expect temperature sensitivities to reflect the environment to which the trees are adapted/ acclimatized.* Global $T_{50s}$ across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017), where $T_{50}$ and $T_{crit}$ decrease with elevation among tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017]. 
  
@@ -345,8 +345,8 @@ Across species, $T_{50}$ is explained less by phylogeny [Slot et al. 2021; Perez
 
 **Similar to photosynthesis, respiration tends to be higher in canopy sun-leaves (Chen et al. 2020), but temperature sensitivity of respiration--$Q_{10}$--shows no definite trend along the vertical gradient [@bolstad_foliar_1999; Weerasinghe et al.2014].**
 
-A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences among species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ across species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. Although, in @bolstad_foliar_1999, temperate trees showed a slight tendency to increase down the canopy relative to upper-canopy leaves as $T_{air}$ increased, [@bolstad_foliar_1999](*see their Fig. 1*). (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*) with evidence of acclimation and a declining trend of respiration with topographical elevation.
-Similary, response of respiration to $T_{leaf}$ [partially represented  by $E_{0}$] did not differ within canopy positions of Quercus rubra, whereas in considering site differences, canopy-position effect in respiration was much greater in mesic sites, and seasonal effect was greater in drier sites [@xuSeasonalVariationTemperature2006].  
+A few studies have found $Q_{10}$ to be greater in upper-canopy leaves than in shaded lower-canopy leaves, with significant differences among species [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], whereas @griffinCanopyPositionAffects2002 found that in Populas deltoides, lower canopy leaf respiration was more sensitive to changes in $T_{air}$ than upper canopy. Other studies have observed no difference in $Q_{10}$ across species vertical profiles and in seedling sun vs. shade leaves [@weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007; @zaragoza-castellsClimatedependentVariationsLeaf2008]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). 
+@xuSeasonalVariationTemperature2006 found that the canopy-position effect  gradient in respiration rates was much greater for Quercus rubra trees in mesic than in xeric sites, but the temperature sensitivity of respiration did not differ between canopy positions.
 
  
 ### VOC production
