--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -166,7 +166,7 @@ Atmospheric CO~2~ concentrations tend to be higher near ground level at night, a
 
 Relative humidity, $RH$, tends to be higher in the understory and decrease with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregor_tree_nodate].
 Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
-In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Maximum $T_{air} and VPD in the understory are further decreased with increasing canopy height and LAI [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
+In combination with $T_{air}$, $RH$ determines vapor pressure deficit ($VPD$) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Maximum $T_{air}$ and VPD in the understory are further decreased with increasing canopy height and LAI [@juckerCanopyStructureTopography2018]. *( This last sentence needs work.)*
 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).**
 The $T_{air}$ gradient along canopies and understories varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [*Defrenne et al. 2021*]. 
@@ -194,7 +194,7 @@ Therefore, $T_{leaf}-T_{air}$ decreases with $g_a$, which in turn increases with
 decreases with $g_s$ (Fig. `r fig_leaf_T`e);
 and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fig_leaf_T`c).
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_fig3.png)
 
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
